--- a/src/Controller/mainscreen.fxml
+++ b/src/Controller/mainscreen.fxml
@@ -21,37 +21,37 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: rgba(51,51,51,1);" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: rgba(51,51,51,1);" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.mainScreenController">
    <children>
       <HBox alignment="CENTER" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: rgba(204,204,204,1);">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="271.0" spacing="5.0">
                <children>
-                  <Button alignment="BOTTOM_CENTER" minWidth="-Infinity" mnemonicParsing="false" text="BACK" />
-                  <Button minWidth="-Infinity" mnemonicParsing="false" text="PLAY" />
-                  <Button minWidth="-Infinity" mnemonicParsing="false" text="NEXT" />
-                  <Slider prefHeight="14.0" prefWidth="91.0" />
+                  <Button alignment="BOTTOM_CENTER" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleBackButtonPress" text="BACK" />
+                  <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#handlePlayButtonPress" text="PLAY/PAUSE" />
+                  <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#handleNextButtonPress" text="NEXT" />
+                  <Slider fx:id="volumeSlider" prefHeight="14.0" prefWidth="91.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="45.0" prefWidth="354.0">
                <children>
-                  <Label minWidth="-Infinity" text="time">
+                  <Label fx:id="startTime" minWidth="-Infinity" text="time">
                      <font>
                         <Font name="Helvetica Bold" size="12.0" />
                      </font>
                   </Label>
-                  <ProgressBar maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="18.0" prefWidth="285.0" progress="0.0" />
-                  <Label minWidth="-Infinity" text="end" />
+                  <ProgressBar fx:id="progBar" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="18.0" prefWidth="285.0" progress="0.0" />
+                  <Label fx:id="endTime" minWidth="-Infinity" text="end" />
                   <ImageView fitHeight="45.0" fitWidth="52.0" opacity="0.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label minWidth="-Infinity" text="&quot;current song - artist&quot;" />
+                  <Label fx:id="songTitle" minWidth="-Infinity" text="&quot;current song - artist&quot;" />
                </children>
             </HBox>
             <HBox alignment="CENTER_RIGHT" minWidth="-Infinity" prefHeight="45.0" prefWidth="414.0">
                <children>
                   <CheckBox minWidth="-Infinity" mnemonicParsing="false" prefHeight="17.0" prefWidth="69.0" text="Shuffle" />
                   <CheckBox minWidth="-Infinity" mnemonicParsing="false" prefHeight="17.0" prefWidth="69.0" text="Repeat" />
-                  <TextField minWidth="-Infinity" prefHeight="25.0" prefWidth="132.0" promptText="Search" />
-                  <Button minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" text="SEARCH" />
+                  <TextField fx:id="searchField" minWidth="-Infinity" prefHeight="25.0" prefWidth="132.0" promptText="Search" />
+                  <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#handleSearchButtonPress" prefHeight="25.0" prefWidth="102.0" text="SEARCH" />
                </children>
             </HBox>
          </children>
@@ -60,7 +60,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" onAction="#handleAddSong" text="Add Song" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
@@ -87,7 +87,7 @@
             </VBox>
             <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="&quot;current playlist name&quot;">
+                <Tab closable="false" text="Library">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -104,20 +104,50 @@
                                     <DropShadow />
                                  </effect>
                               </TableView>
+                           </children></AnchorPane>
+                  </content>
+                </Tab>
+                  <Tab closable="false" text="Song Queue">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TableView prefHeight="2000.0" prefWidth="1920.0">
+                                 <columns>
+                                    <TableColumn prefWidth="150.0" text="Name" />
+                                    <TableColumn minWidth="0.0" prefWidth="78.0" text="Time" />
+                                    <TableColumn prefWidth="208.0" text="Artist" />
+                                    <TableColumn prefWidth="157.0" text="Album" />
+                                    <TableColumn prefWidth="145.0" text="Genre" />
+                                    <TableColumn prefWidth="56.0" text="Plays" />
+                                 </columns>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                              </TableView>
+                           </children></AnchorPane>
+                    </content>
+                  </Tab>
+                <Tab closable="false" text="No Playlist Selected">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TableView prefHeight="2000.0" prefWidth="1920.0">
+                                 <columns>
+                                    <TableColumn prefWidth="150.0" text="Name" />
+                                    <TableColumn minWidth="0.0" prefWidth="78.0" text="Time" />
+                                    <TableColumn prefWidth="208.0" text="Artist" />
+                                    <TableColumn prefWidth="157.0" text="Album" />
+                                    <TableColumn prefWidth="145.0" text="Genre" />
+                                    <TableColumn prefWidth="56.0" text="Plays" />
+                                 </columns>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                              </TableView>
                            </children>
                         </AnchorPane>
                   </content>
                 </Tab>
-                <Tab text="Library">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </Tab>
-                  <Tab text="Song Queue">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                    </content>
-                  </Tab>
               </tabs>
                <effect>
                   <DropShadow />
