--- a/src/Controller/registerscreen.fxml
+++ b/src/Controller/registerscreen.fxml
@@ -25,7 +25,7 @@
                 <Font name="Helvetica Bold" size="30.0" />
             </font>
         </Label>
-        <Button fx:id="registerButton" layoutX="111.0" layoutY="358.0" mnemonicParsing="false" onAction="#handleRegisterButtonPress" prefHeight="56.0" prefWidth="152.0" style="-fx-background-color: rgba(204,204,204,0.07);" text="Register" textFill="#cccccc">
+        <Button fx:id="registerButton" layoutX="199.0" layoutY="358.0" mnemonicParsing="false" onAction="#handleRegisterButtonPress" prefHeight="56.0" prefWidth="152.0" style="-fx-background-color: rgba(204,204,204,0.07);" text="Register" textFill="#cccccc">
             <font>
                 <Font name="Helvetica Bold" size="24.0" />
             </font>
@@ -48,5 +48,13 @@
             <Font name="Helvetica Bold" size="30.0" />
          </font>
       </PasswordField>
+      <Button fx:id="registerButton1" layoutX="34.0" layoutY="358.0" mnemonicParsing="false" onAction="#handleBackButtonPress" prefHeight="56.0" prefWidth="152.0" style="-fx-background-color: rgba(204,204,204,0.07);" text="Back" textFill="#cccccc">
+         <font>
+            <Font name="Helvetica Bold" size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
     </children>
 </Pane>
