--- a/src/Controller/mainscreen.fxml
+++ b/src/Controller/mainscreen.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: rgba(51,51,51,1);" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.mainScreenController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: rgba(51,51,51,1);" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.mainScreenController">
    <children>
       <HBox alignment="CENTER" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: rgba(204,204,204,1);">
          <children>
@@ -32,7 +32,7 @@
                   <Slider fx:id="volumeSlider" prefHeight="14.0" prefWidth="91.0" />
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="45.0" prefWidth="354.0">
+            <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="45.0" prefWidth="354.0">
                <children>
                   <Label fx:id="startTime" minWidth="-Infinity" text="time">
                      <font>
@@ -41,13 +41,13 @@
                   </Label>
                   <ProgressBar fx:id="progBar" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="18.0" prefWidth="285.0" progress="0.0" />
                   <Label fx:id="endTime" minWidth="-Infinity" text="end" />
-                  <Label fx:id="songTitle" minWidth="-Infinity" text="&quot;current song - artist&quot;" />
+                  <Label fx:id="songTitle" maxWidth="-Infinity" minWidth="-Infinity" text="&quot;current song - artist&quot;" textAlignment="CENTER" />
                </children>
             </HBox>
             <HBox alignment="CENTER_RIGHT" minWidth="-Infinity" prefHeight="45.0" prefWidth="414.0">
                <children>
                   <CheckBox minWidth="-Infinity" mnemonicParsing="false" prefHeight="17.0" prefWidth="69.0" text="Shuffle" />
-                  <CheckBox minWidth="-Infinity" mnemonicParsing="false" prefHeight="17.0" prefWidth="69.0" text="Repeat" />
+                  <CheckBox fx:id="repeatRadioButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleRepeatAction" prefHeight="17.0" prefWidth="69.0" text="Repeat" />
                   <TextField fx:id="searchField" minWidth="-Infinity" prefHeight="25.0" prefWidth="132.0" promptText="Search" />
                   <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#handleSearchButtonPress" prefHeight="25.0" prefWidth="102.0" text="SEARCH" />
                </children>
@@ -82,7 +82,7 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <TableView fx:id="tableView" onMouseClicked="#handleSongClickedInTable" prefHeight="2000.0" prefWidth="1920.0">
+                              <TableView fx:id="tableView" maxWidth="-Infinity" onMouseClicked="#handleSongClickedInTable" prefHeight="2000.0" prefWidth="1920.0">
                                 <columns>
                                   <TableColumn fx:id="nameCol" prefWidth="150.0" text="Name" />
                                   <TableColumn fx:id="durationCol" minWidth="0.0" prefWidth="78.0" text="Duration" />
