--- a/src/Controller/mainscreen.fxml
+++ b/src/Controller/mainscreen.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -26,20 +25,20 @@
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="271.0" spacing="5.0">
                <children>
+                  <Slider fx:id="volumeSlider" prefHeight="14.0" prefWidth="91.0" />
                   <Button alignment="BOTTOM_CENTER" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleBackButtonPress" text="BACK" />
                   <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#handlePlayButtonPress" text="PLAY/PAUSE" />
                   <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#handleNextButtonPress" text="NEXT" />
-                  <Slider fx:id="volumeSlider" prefHeight="14.0" prefWidth="91.0" />
                </children>
             </HBox>
-            <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="45.0" prefWidth="354.0">
+            <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="527.0">
                <children>
                   <Label fx:id="startTime" minWidth="-Infinity" text="time">
                      <font>
                         <Font name="Helvetica Bold" size="12.0" />
                      </font>
                   </Label>
-                  <ProgressBar fx:id="progBar" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="18.0" prefWidth="285.0" progress="0.0" />
+                  <Slider fx:id="progBar" prefHeight="14.0" prefWidth="361.0" />
                   <Label fx:id="endTime" minWidth="-Infinity" text="end" />
                   <Label fx:id="songTitle" maxWidth="-Infinity" minWidth="-Infinity" text="&quot;current song - artist&quot;" textAlignment="CENTER" />
                </children>
