--- a/src/Controller/mainscreen.fxml
+++ b/src/Controller/mainscreen.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -19,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: rgba(51,51,51,1);" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.mainScreenController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: rgba(51,51,51,1);" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.mainScreenController">
    <children>
       <HBox alignment="CENTER" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: rgba(204,204,204,1);">
          <children>
@@ -45,12 +47,13 @@
             </HBox>
             <HBox alignment="CENTER_RIGHT" minWidth="-Infinity" prefHeight="45.0" prefWidth="414.0">
                <children>
-                  <CheckBox minWidth="-Infinity" mnemonicParsing="false" prefHeight="17.0" prefWidth="69.0" text="Shuffle" />
+                  <CheckBox minWidth="-Infinity" mnemonicParsing="false" onAction="#handleShuffleAction" prefHeight="17.0" prefWidth="69.0" text="Shuffle" />
                   <CheckBox fx:id="repeatRadioButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleRepeatAction" prefHeight="17.0" prefWidth="69.0" text="Repeat" />
                   <TextField fx:id="searchField" minWidth="-Infinity" prefHeight="25.0" prefWidth="132.0" promptText="Search" />
                   <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#handleSearchButtonPress" prefHeight="25.0" prefWidth="102.0" text="SEARCH" />
                </children>
             </HBox>
+            <Button fx:id="clearButton" mnemonicParsing="false" onAction="#handleClearButtonPress" text="CLEAR" />
          </children>
       </HBox>
       <MenuBar>
@@ -58,23 +61,37 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#handleAddSong" text="Add Song" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleDeleteSong" text="Delete" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
+          <Menu mnemonicParsing="false" text="Edit" />
         </menus>
       </MenuBar>
       <SplitPane dividerPositions="0.15" maxHeight="1.7976931348623157E308" prefHeight="2000.0" prefWidth="1920.0" style="-fx-background-color: rgba(178,178,178,1);">
          <items>
-            <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: rgba(204,204,204,1);" />
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: rgba(204,204,204,1);">
+               <children>
+                  <Label text="Selected Playlist:" />
+                  <Label fx:id="playlistSelectLabel" text="No Playlist Selected">
+                     <VBox.margin>
+                        <Insets bottom="40.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label text="Select A Playlist" />
+                  <ChoiceBox fx:id="choiceBox" prefWidth="150.0">
+                     <VBox.margin>
+                        <Insets bottom="40.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <Button mnemonicParsing="false" onAction="#addSongToPlaylist" prefHeight="54.0" prefWidth="151.0" text="Add Selected Song To Current Playlist" wrapText="true">
+                     <VBox.margin>
+                        <Insets bottom="80.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Label text="Create A New Playlist" />
+                  <TextField fx:id="playlistTextBox" maxWidth="-Infinity" prefHeight="25.0" prefWidth="155.0" promptText="Enter Playlist Name" />
+                  <Button mnemonicParsing="false" onAction="#handleCreatePlaylistButton" text="Create Playlist" />
+               </children></VBox>
             <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab closable="false" text="Library">
@@ -102,10 +119,25 @@
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                     </content>
                   </Tab>
-                <Tab closable="false" text="No Playlist Selected">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
+                <Tab fx:id="playlistTab" closable="false" text="No Playlist Selected">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TableView fx:id="tableViewPlaylist" maxWidth="-Infinity" onMouseClicked="#handleSongClickedInTable" prefHeight="2000.0" prefWidth="1920.0">
+                                 <columns>
+                                    <TableColumn fx:id="nameColPlaylist" prefWidth="150.0" text="Name" />
+                                    <TableColumn fx:id="durationColPlaylist" minWidth="0.0" prefWidth="78.0" text="Duration" />
+                                    <TableColumn fx:id="artistColPlaylist" prefWidth="208.0" text="Artist" />
+                                    <TableColumn fx:id="genreColPlaylist" prefWidth="145.0" text="Genre" />
+                                    <TableColumn fx:id="playsColPlaylist" prefWidth="114.0" text="Plays" />
+                                 </columns>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                              </TableView>
+                           </children>
+                        </AnchorPane>
+                     </content>
                 </Tab>
               </tabs>
                <effect>
