--- a/src/Controller/mainscreen.fxml
+++ b/src/Controller/mainscreen.fxml
@@ -71,6 +71,13 @@
          <items>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: rgba(204,204,204,1);">
                <children>
+                  <Button mnemonicParsing="false" onAction="#handleAddToQueuePress" text="Add Song To Queue">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#handleClearQueuePress" text="Clear Last Item" />
+                  <VBox prefHeight="313.0" prefWidth="189.0" />
                   <Label text="Selected Playlist:" />
                   <Label fx:id="playlistSelectLabel" text="No Playlist Selected">
                      <VBox.margin>
@@ -92,9 +99,9 @@
                   <TextField fx:id="playlistTextBox" maxWidth="-Infinity" prefHeight="25.0" prefWidth="155.0" promptText="Enter Playlist Name" />
                   <Button mnemonicParsing="false" onAction="#handleCreatePlaylistButton" text="Create Playlist" />
                </children></VBox>
-            <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab closable="false" text="Library">
+                <Tab fx:id="library" closable="false" text="Library">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -114,9 +121,22 @@
                         </AnchorPane>
                   </content>
                 </Tab>
-                  <Tab closable="false" text="Song Queue">
+                  <Tab fx:id="queue" closable="false" text="Song Queue">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TableView fx:id="tableViewQueue" maxWidth="-Infinity" onMouseClicked="#handleSongClickedInTable" prefHeight="2000.0" prefWidth="1920.0">
+                                 <columns>
+                                    <TableColumn fx:id="nameColQueue" prefWidth="150.0" text="Name" />
+                                    <TableColumn fx:id="durationColQueue" minWidth="0.0" prefWidth="78.0" text="Duration" />
+                                    <TableColumn fx:id="artistColQueue" prefWidth="208.0" text="Artist" />
+                                    <TableColumn fx:id="genreColQueue" prefWidth="145.0" text="Genre" />
+                                 </columns>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                              </TableView>
+                           </children></AnchorPane>
                     </content>
                   </Tab>
                 <Tab fx:id="playlistTab" closable="false" text="No Playlist Selected">
@@ -129,7 +149,6 @@
                                     <TableColumn fx:id="durationColPlaylist" minWidth="0.0" prefWidth="78.0" text="Duration" />
                                     <TableColumn fx:id="artistColPlaylist" prefWidth="208.0" text="Artist" />
                                     <TableColumn fx:id="genreColPlaylist" prefWidth="145.0" text="Genre" />
-                                    <TableColumn fx:id="playsColPlaylist" prefWidth="114.0" text="Plays" />
                                  </columns>
                                  <effect>
                                     <DropShadow />
